--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tonconnect/protocol": "^2.2.6",
     "@types/body-parser": "^1.19.5",
     "@types/cors": "^2.8.17",
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
