fix: validate tx

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
+    "@orbs-network/ton-access": "^2.3.3",
     "@ton/crypto": "^3.3.0",
     "@ton/ton": "^15.1.0",
     "@tonconnect/protocol": "^2.2.6",
