--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "mongoose": "^8.0.3",
     "nodemon": "^3.0.1",
     "random-weighted-choice": "^0.1.4",
-    "tweetnacl": "^1.0.3"
+    "tweetnacl": "^1.0.3",
+    "web3": "^4.16.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
